--- a/src/Convey.Metrics.AppMetrics/Convey.Metrics.AppMetrics.csproj
+++ b/src/Convey.Metrics.AppMetrics/Convey.Metrics.AppMetrics.csproj
@@ -7,6 +7,10 @@
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <ProjectReference Include="..\..\..\Convey\src\Convey\Convey.csproj" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <PackageReference Include="Convey" Version="0.0.1-preview" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="App.Metrics.AspNetCore" Version="3.0.0" />
