--- a/src/Convey.Metrics.AppMetrics/Convey.Metrics.AppMetrics.csproj
+++ b/src/Convey.Metrics.AppMetrics/Convey.Metrics.AppMetrics.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+    <Description>Convey.Metrics.AppMetrics</Description>
+    <Authors>DevMentors.io</Authors>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <AssemblyName>Convey.Metrics.AppMetrics</AssemblyName>
+    <Title>Convey.Metrics.AppMetrics</Title>
+    <PackageId>Convey.Metrics.AppMetrics</PackageId>
+    <PackageTags>Convey.Metrics.AppMetrics</PackageTags>
+  </PropertyGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <ProjectReference Include="..\..\..\Convey\src\Convey\Convey.csproj" />
